# PaloAltoAPIAutomation

./: .gitignore  app.py  pyproject.toml
lib/: __init__.py  filehandler.py
lib/api/: __init__.py  auth.py  getlist.py  siteconfig.py
lib/api/SiteConfiguration/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
lib/api/SiteConfiguration/api/: __init__.py  site_configuration_api.py
lib/api/SiteConfiguration/models/: __init__.py  address.py  adjustment.py  aggregate.py  aggregate_data.py  bulk_response.py  cluster_event.py  cluster_member.py  element_wan_interface_state.py  error.py  error_response.py  extended_tag.py  get_sdwan_v20_api_hubserviceendpoints200_response.py  get_sdwan_v20_api_sites_site_id_siteciphers200_response.py  get_sdwan_v20_api_sites_site_id_spokeclusters200_response.py  get_sdwan_v26_api_sites_site_id_waninterfaces200_response.py  get_sdwan_v27_api_sites_site_id_waninterfaces200_response.py  get_sdwan_v30_api_sites_site_id_hubclusters200_response.py  get_sdwan_v30_api_sites_site_id_hubclusters_hub_cluster_id_hubclustermembers200_response.py  get_sdwan_v40_api_sites_site_id_hubclusters200_response.py  get_sdwan_v48_api_sites200_response.py  get_sdwan_v49_api_sites200_response.py  hub_cluster.py  hub_cluster_element.py  hub_cluster_member.py  hub_cluster_member_screen.py  hub_cluster_operation_v4.py  hub_cluster_query_filter_v4.py  hub_cluster_query_v4.py  hub_cluster_screen.py  hub_cluster_state_element.py  hub_cluster_status_v4.py  list_response.py  (+43 more)
lib/widget/: progress_bar.py
window/: __init__.py  correction.py  setting.py
